Fixed overflow issue with wrapper

--- a/style.css
+++ b/style.css
@@ -7,20 +7,14 @@ body {
     background: #e6e9e7;
     font-family: 'Rubik', sans-serif;
     padding: 24px;
-    overflow-x: hidden;
 }
 
-h3 {
-    text-align: left;
+#wrapper {
+    overflow-x: hidden;
 }
 
 nav {
     flex: 1 1 0%;
-}
-
-li {
-    display: inline-block;
-    margin-right: 12px;
 }
 
 a {
@@ -42,21 +36,6 @@ a {
     box-sizing: border-box;
 }
 
-.main-container {
-    display: flex;
-    -webkit-box-pack: justify;
-    justify-content: space-between;
-    margin-right: 10px;
-    margin-left: 10px;
-}
-
-.left-column, .right-column {
-    display: inline;
-    font-size: large;
-    font-weight: bold;
-    flex: 0 1 45%;
-}
-
 #header {
     height: 100vh;
 }
@@ -67,11 +46,11 @@ a {
     left: 0;
     width: 100%;
     height: 100%;
-    background-color: #2280ce;
+    background-color: #567a98;
     background-repeat: no-repeat;
     background-size: cover;
-    -webkit-clip-path: polygon(0 0, 70% 0, 0 40%, 0 0);
-    clip-path: polygon(0 0, 70% 0, 0 40%, 0 0);
+    -webkit-clip-path: polygon(0 0, 700px 0, 0 400px, 0 0);
+    clip-path: polygon(0 0, 700px 0, 0 400px, 0 0);
 }
 
 .header-top {
@@ -82,7 +61,9 @@ a {
 }
 
 .header-list {
+    display: inline-block;
     float: right;
+    margin-right: 12px;
 }
 
 .header-container {
@@ -108,7 +89,7 @@ a {
     transform: translateX(72px);
 }
 
-.header-line {
+.header-info {
     margin-top: 12px;
     font-size: 24px;
     font-weight: bold;
@@ -123,4 +104,39 @@ a {
 .zoom:hover {
     transform: scale(1.1);
     -webkit-transform: scale(1.1);
+}
+
+#main {
+    width: 60%;
+    margin: auto auto;
+}
+
+.main-title {
+    font-size: 36px;
+    font-weight: bold;
+    margin-bottom: 24px;
+}
+
+.main-container {
+    display: flex;
+    -webkit-box-pack: justify;
+    justify-content: space-between;
+}
+
+.left-column, .right-column {
+    display: inline;
+    font-size: large;
+    font-weight: bold;
+    flex: 0 1 45%;
+}
+
+.column-title {
+    font-size: 24px;
+    font-weight: bold;
+    color: #567a98;
+}
+
+.column-subtitle {
+    font-size: 18px;
+    font-weight: bold;
 }
